# pomodo

./: BUILD.bazel  README.md  WORKSPACE  go.mod  main.go
cmd/: BUILD.bazel  root.go  serve.go
web/: BUILD.bazel  web.go
web/static/: index.html  main.js
